2009-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/flash.h: Modest API change: cyg_flash_init() no longer
	takes a printf function argument. Instead two new API functions
	are available: cyg_flash_set_printf() and
	cyg_flash_set_global_printf().
	
	* src/flash.c (CHATTER): Don't attempt output if printf function
	is NULL.
	(cyg_flash_init): No longer takes printf arg.
	(cyg_flash_set_printf): New. Set per-device printf function, locking
	if needed.
	(cyg_flash_set_global_printf): New. Set printf function for all
	devices, locking if needed.
	
	* src/flashiodev.c (flashiodev_init): cyg_flash_init no longer takes
	printf arg, and we can leave global printf at default.
	* src/flashiodevlegacy.c (flashiodev_init): Ditto.

	* src/legacy_api.c (flash_init): cyg_flash_init no longer takes
	printf arg. So call cyg_flash_set_global_printf as well.

	* src/legacy_dev.c (legacy_flash_init): legacy drivers can't handle
	NULL printf function, so provide a dummy.

	* doc/flash.sgml: Document removal of printf functionality of
	cyg_flash_init() and document cyg_flash_set_printf() and
	cyg_flash_set_global_printf().

2009-02-13  Bart Veer  <bartv@ecoscentric.com>

	* doc/flash.sgml: remove incomplete sentence.

	* cdl/io_flash.cdl: remove CYGHWR_IO_FLASH_DEVICE_NOT_IN_RAM, no
	longer needed.

2008-11-23  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* doc/flash.sgml: Fix flash.h header name typos.

2008-11-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (cyg_flash_init): Allow repeated calls to
	change the printf function for all devices. There are
	times you don't any output, eg you are downloading an
	image over the serial port.

2008-08-29  Nick Garnett  <nickg@ecoscentric.com>

	* src/flashiodev.c (flashiodev_init): Assign
	CYG_DEVTAB_STATUS_BLOCK to status field of device table
	entries. This causes devfs to call the right read/write
	operations.

2008-06-10  Jonathan Larmour  <jifl@eCosCentric.com>
